# Rust-Cmd-Line-Tools

./: LICENSE  README.md
copo/: Cargo.toml  README.md
fifi/: Cargo.toml  README.md
fifi/src/: main.rs
mega/: Cargo.toml  README.md
mega/src/: main.rs  practice
tico/: Cargo.toml  README.md
